[package]
name = "rtss-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
axum = "0.6.18"
config = "0.13.3"
dashmap = "5.4.0"
futures = "0.3.28"
futures-util = "0.3.28"
lapin = "2.2.1"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tower-http = { version = "0.4.1", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
